2008-12-01  Pamela Greene  <pam@chromium.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=22365
        Add a test to verify behavior of DOM node constructors.

        * fast/dom/dom-constructors-expected.txt: Added.
        * fast/dom/dom-constructors.html: Added.

2008-12-01  Pamela Greene  <pam@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22358
        Add a test for crash on "Copy" after showing a tooltip.

        * editing/pasteboard/copy-crash-expected.txt: Added.
        * editing/pasteboard/copy-crash.html: Added.

2008-12-01  Alexey Proskuryakov  <ap@webkit.org>

        Rubber-stamped by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=22531
        Stack overflow on PowerPC on fast/workers/use-machine-stack.html

        Disabling the test until the problem can be investigated.

        * fast/workers/use-machine-stack.html: Removed.
        * fast/workers/use-machine-stack.html-disabled: Copied from fast/workers/use-machine-stack.html.

2008-11-28  Sam Weinig  <sam@webkit.org>

        Reviewed by Alexey Proskuryakov.

        Test for https://bugs.webkit.org/show_bug.cgi?id=21063
        NULL pointer crash in dispatchEvent(null);

        * fast/events/dispatchEvent-crash-expected.txt: Added.
        * fast/events/dispatchEvent-crash.html: Added.

2008-11-29  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        - test for https://bugs.webkit.org/show_bug.cgi?id=22454
          <rdar://problem/6405550> REGRESSION (3.2-TOT): Crash below FontFallbackList::fontDataAt on jacobian.org

        * http/tests/misc/font-face-in-multiple-segmented-faces-expected.txt: Added.
        * http/tests/misc/font-face-in-multiple-segmented-faces.html: Added.

2008-11-29  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=14968