@@ -1,0 +1,22 @@
+<html>
+<script>
+if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+    layoutTestController.waitUntilDone();
+}
+
+function run_test() {
+    var nav = window.navigator;
+    document.getElementsByTagName("form")[0].submit();
+    nav.cookieEnabled;
+}
+</script>
+<body onload="run_test()">
+<form action="resources/test-successful-destination.html" method="GET"></form>
+This tests that navigator.cookieEnabled does not crash the browser after
+the frame navigates away from the original page. <br>
+
+You should not see this page if the test passes.<br>
+<div>
+</body>
+</html>
