@@ -1,0 +1,11 @@
+<html>
+<head></head>
+<body onload="done()">
+If this page appears without a crash, the test has passed.
+<script>
+function done() {
+    if (window.layoutTestController)
+        layoutTestController.notifyDone();
+}
+</script>
+</body></html>
