@@ -1,5 +1,16 @@
 2008-12-01  Pamela Greene  <pam@chromium.org>
 
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22463
+        Add a test for accessing navigator.cookieEnabled after navigation.
+
+        * fast/dom/navigator-cookieEnabled-no-crash-expected.txt: Added.
+        * fast/dom/navigator-cookieEnabled-no-crash.html: Added.
+        * fast/dom/resources/test-successful-destination.html: Added.
+
+2008-12-01  Pamela Greene  <pam@chromium.org>
+
         Reviewed by Sam Weinig.
 
         https://bugs.webkit.org/show_bug.cgi?id=22365
